# asyncpg-queue

./: .gitignore  LICENSE  README.md  pyproject.toml
asyncpg_queue/: __init__.py  bootstrap.py  queue.py  worker.py
asyncpg_queue/version/: 20230111.sql
example/benchmark/: README.md  consumer.py  producer.py
test/: conftest.py  test_queue.py  test_schema.py  test_worker.py
